# reco-tut-chef

./: Makefile  config.properties  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.dvc/: config
artifacts/30music/models/: itempop.pkl
artifacts/30music/results/: itempop.pkl
artifacts/etc/: personalize_item_meta.pkl  personalize_model_pers.pkl  personalize_model_pop.pkl  personalize_model_sims.pkl
artifacts/olx/outputs/: Random.gzip  TopPop.gzip
data/bronze/30music/: .gitignore  sessions.parquet.snappy.dvc  sessions_sample_10.parquet.snappy.dvc
data/bronze/citeseer/: .gitignore  ind.citeseer.graph.dvc
data/bronze/dota/: .gitignore  README.md  test.parquet.snappy.dvc  train.parquet.snappy.dvc  train_targets.parquet.snappy.dvc
data/bronze/ml-100k/: .gitignore  items.csv.dvc  ratings.csv.dvc  users.csv.dvc
data/bronze/ml-1m/: .gitignore  movies.dat.dvc  ratings.dat.dvc  users.dat.dvc
data/bronze/olx/: .gitignore  (+2 more)
data/silver/: .gitignore
src/: config.py  data.py  dataset.py  evaluate.py  evaluator.py  logging.py  prepare.py  train.py
src/dataprep/: 30music.py
src/eval/: __init__.py  itempop.py  metrics.py  seqeval.py
src/ml1m/: data_load.py  evaluate.py
src/models/: __init__.py  abstract.py  als.py  base.py  itempop.py  knn.py  lightfm.py  random.py  rp3beta.py  slim.py  toppop.py
src/train/: itempop.py
src/utils/: __init__.py  gdrive.py  olx.py
tests/: test_configurator.py  test_dummy.py  test_logger.py  test_session_dataset.py
tests/data/: config.properties  config_MF.properties  config_MLP.properties
(+34 files in other folders)
