[metadata]
name = src
version = 0.0.1
author = Sparsh Agarwal
author_email = recohut@gmail.com
description = RecSys package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sparsh-ai
project_urls =
    Bug Tracker = https://github.com/sparsh-ai
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Recommendation Systems :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src